Fix project image animation (arbitrary slider 'div' was covering it) + quality of life changes

--- a/src/styles/ui/projects/_project-banner.scss
+++ b/src/styles/ui/projects/_project-banner.scss
@@ -4,6 +4,7 @@
   height: 120px;
   width: 80%;
   justify-self: center;
+  position: relative;
 
   @include sm {
     height: 150px;
